[gd_scene load_steps=2 format=3 uid="uid://cm7gyweejfo7x"]

[ext_resource type="Script" uid="uid://1igbn84yth5s" path="res://Prototypes/Menus/Store Menu/CartButton/cart_button.gd" id="1_vujyj"]

[node name="CartPartButton" type="Button"]
offset_left = 0.3636322
offset_top = 27.090897
offset_right = 545.36365
offset_bottom = 102.0909
script = ExtResource("1_vujyj")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 12.0
offset_right = 531.49896
offset_bottom = 62.0
theme_override_constants/separation = 20

[node name="Name" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "KOKO ENG MK1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Ammount" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="AmmountTitle" type="Label" parent="HBoxContainer/VBoxContainer/Ammount"]
layout_mode = 2
text = "AMMOUNT: "

[node name="AmmountValue" type="Label" parent="HBoxContainer/VBoxContainer/Ammount"]
layout_mode = 2
text = "2"

[node name="Price" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PriceTitle" type="Label" parent="HBoxContainer/VBoxContainer/Price"]
layout_mode = 2
text = "PRICE: "

[node name="PriceValue" type="Label" parent="HBoxContainer/VBoxContainer/Price"]
layout_mode = 2
text = "200000000000000"

[node name="Less" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "-"

[node name="More" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "+"

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="HBoxContainer/Less" to="." method="_on_less_pressed"]
[connection signal="pressed" from="HBoxContainer/More" to="." method="_on_more_pressed"]
